# cpdesctop

./: Cargo.toml  README.md  main.rs  tauri.conf.json
.github/workflows/: main.yml
